--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "vite": "vite",
+        "dev": "vite",
+        "build": "vite build",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -10,13 +12,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^4.5.2",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
+        "bootstrap": "^5.3.2",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0"
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.4.0",
+        "vite": "^4.5.1"
     }
 }
